syntax = "proto3";
package m2.channel_information.v1;

import "google/protobuf/empty.proto";

option csharp_namespace = "Metin2Server.Shared.DbContracts";

service ChannelInformationService {
  rpc SendChannelInformation (SendChannelInformationGrpcRequest) returns (google.protobuf.Empty);
  rpc GetChannelInformations (google.protobuf.Empty) returns (GetChannelInformationsGrpcResponse);
  rpc RemoveChannelInformation (RemoveChannelInformationGrpcRequest) returns (google.protobuf.Empty);
}

message SendChannelInformationGrpcRequest {
  ChannelInformationGrpc channel_information = 1;
}

message GetChannelInformationsGrpcResponse {
  repeated ChannelInformationGrpc entries = 1;
}

message RemoveChannelInformationGrpcRequest {
  uint32 port = 1;
}

message ChannelInformationGrpc {
  uint32 port = 1;
  uint32 server_index = 2;
  ChannelStatusGrpc status = 3;
  uint32 online_players = 4;
  double cpu_load = 5;
  double memory_load = 6;
}

enum ChannelStatusGrpc {
  CHANNEL_STATUS_GRPC_OFFLINE = 0;
  CHANNEL_STATUS_GRPC_ONLINE = 1;
  CHANNEL_STATUS_GRPC_BUSY = 2;
  CHANNEL_STATUS_GRPC_FULL = 3;
}
